kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-ingress
  annotations:
   react.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: react
  tls:
  rules:
  - host: "localhost"
    http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: react-service
           port: 
            number: 3000
